# v0-market-intelligence-dashboard

./: .env.local.example  =0.2.54  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vl-test2.js  vl-text-check.js
backend/: .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: ai.py  backtesting.py  breakouts.py  indicators.py  market.py  (+4 more)
backend/app/core/: config.py  cors.py  database.py
backend/app/data/: cleaning.py  ingestion.py  validation.py
backend/app/jobs/: compute_indicators.py  fetch_market_data.py  generate_ai_summaries.py  scan_breakouts.py
backend/app/models/: ai.py  asset.py  backtest.py  candle.py  indicator.py  signal.py  volume_profile.py
backend/app/schemas/: ai.py  backtest.py  breakout.py  common.py  indicator.py  market.py  signal.py  stock.py  volume_profile.py
backend/app/services/: ai_service.py  backtest_service.py  breakout_service.py  futu_service.py  indicator_service.py  kimi_service.py  market_service.py  ollama_service.py  risk_service.py  signal_service.py  stock_service.py  volume_profile_service.py
backend/market_intelligence_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/migrations/versions/: 8282803e019a_initial_schema.py
backend/scripts/: seed_mock_data.py
backend/tests/: conftest.py  test_breakout_scoring.py  test_database_reads.py  test_futu_integration.py  test_health.py  test_indicators.py  test_ollama_service.py  test_signal_scoring.py  test_volume_profile.py
(+57 files in other folders)
